25.jun (la)
      - better handling of Tab key in text element
24.jun (ws)
      - added experimental sampler msynth2
      - ongoing work on libmscore
      (la)
      - fix #11246: change default number of measures and pickup measure timesig
14.jun (ws)
      - more work on libmscore: the element context menus are back
        (there is still some functionality commented out)
      (la)
      - enhance plugin framework : chord.small, chord.noStem, rest.small, note.velocity, score.keysig
12.jun (ws)
      - work in progress: moving gui independent code into libmscore
11.jun (ws)
      - fix corruption of segmentList (loading of guitar pro files crashed)
      - created "libmscore" which will contain gui independent code
       (la)
      - fix #11019: new files: jazz templates, demo & chord styles by Marc Sabatella
9.jun (ws)
      - fixed regression for "hide empty staves"
      - fixed start repeat barline
7.jun (ws)
      - "x" (flip) flips the up/down position of a note augmentation dot
        (if note y position is on a staff line)
      - align augmentation dots vertically also for different voices
      - fix #10988: Cannot change 4/4 to 2/2
      (la)
      - add support for OSC #bundle
      - fix support for float in OSC
      - add oscChannelVolume, pan and mute
6.jun (ws)
      - fix #10607: Copy n' Paste of notes 'forgets' some rests
        (patch from Miwarre)
      - fix #10979: invisible text has wrong colour (patch from Miwarre)
      - fix #10970: Select All non-functional
      (la)
      - fix #9107: Pasting multiple multi-voice notes causes crash
      - remove delete button in symboldialog, fix system flag
4.jun (ws)
      - chord layout: avoid collision between hook and augmentation dot
      - fix regression: delete instrument name
      - added code from mobile development: libmscore qt mxml
3.jun (ws)
      - fix #10937
02.jun (la)
      - fix #10915: Rename WRC to WRC.BAT in CMakeList.txt
01.jun (la)