@@ -1,5 +1,6 @@
 25.jun (la)
       - better handling of Tab key in text element
+      - add permanent cookie support in MuseScore Connect, prepare translation
 24.jun (ws)
       - added experimental sampler msynth2
       - ongoing work on libmscore
